# pyBuildReleaseTest

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/pyBuildReleaseTest/: DataAccess_ApplicationDbContext.py  DataAccess_PersonService.py  DataModel_Person.py  Helpers_Logger.py
src/pyBuildReleaseTest/DataAccess/: ApplicationDbContext.py  PersonService.py
src/pyBuildReleaseTest/DataModel/: BusinessEntity.py  Person.py
src/pyBuildReleaseTest/Helpers/: Logger.py
tests/: test-DataAccess_ApplicationDbContext.py  test-DataAccess_PersonService.py  test-DataModel_Person.py
tests/DataAccess/: test-ApplicationDbContext.py  test-PersonService.py
tests/DataModel/: test-BusinessEntity.py  test-Person.py
